[Spark] Fix type_text and type_name in UCSingleCatalog (#1382)
**PR Checklist**

- [x] A description of the changes is added to the description of this
PR.
- [ ] If there is a related issue, make sure it is linked to this PR.
- [ ] If you've fixed a bug or added code that should be tested, add
tests!
- [ ] If you've added or modified a feature, documentation in `docs` is
updated

**Description of changes**

Fix type_text and type_name in UCSingleCatalog

---------

Signed-off-by: Yi Li <yi.li@databricks.com>